force-app/main/default/objects/Deal_Forecast_Income__c/Deal_Forecast_Income__c.object-meta.xml
<CustomObject>
    <label>Deal Forecast Income</label>
    <nameField>
        <displayFormat>Deal Forecast-{000000}</displayFormat>
        <label>Deal Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Forecast Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>