force-app/main/default/objects/Deal_Forecast_Income__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Forecast Incomes</relationshipLabel>
    <relationshipName>Deal_Forecast_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>