force-app/main/default/objects/Deal_Forecast_Income__c/fields/Expected_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Year__c</fullName>
    <label>Expected Start Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>