force-app/main/default/objects/Deal_Forecast_Income__c/fields/Last_Adjustment_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Adjustment_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Adjustment By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Forecast_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>