force-app/main/default/objects/Deal_Forecast_Income__c/fields/Main_Deal_forecast__c.field-meta.xml
<CustomField>
    <fullName>Main_Deal_forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Deal forecast</label>
    <referenceTo>Deal_Forecast_Income__c</referenceTo>
    <relationshipLabel>Deal Forecast Incomes</relationshipLabel>
    <relationshipName>Deal_Forecast_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>