force-app/main/default/objects/Deal_Forecast_Income__c/fields/NI_Amount__c.field-meta.xml
<CustomField>
    <fullName>NI_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total NI Amount of this deal</description>
    <label>NI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>