force-app/main/default/objects/Deal_Forecast_Income__c/fields/Opp_App_Status__c.field-meta.xml
<CustomField>
    <fullName>Opp_App_Status__c</fullName>
    <formula>TEXT(Opportunity__r.Application_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp/ App Status</label>
    <type>Text</type>
</CustomField>