force-app/main/default/objects/Deal_Forecast_Income__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Forecast Incomes</relationshipLabel>
    <relationshipName>Deal_Forecast_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>