force-app/main/default/objects/Deal_Forecast_Income__c/fields/Opportunity_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Product Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>