force-app/main/default/objects/Deal_Forecast_Income__c/fields/OpportunityLineItem_Limit_Volume__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem_Limit_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This Year Expected Revenue</description>
    <label>Limit / Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>