force-app/main/default/objects/Deal_Forecast_Income__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Deal Forecast Incomes</relationshipLabel>
    <relationshipName>Deal_Forecast_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>