force-app/main/default/objects/Deal_Forecast_Income__c/fields/RM_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Owner_Name__c</fullName>
    <formula>Customer__r.Owner.FirstName  +&apos; &apos;+ Customer__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Owner Name</label>
    <type>Text</type>
</CustomField>