force-app/main/default/objects/Deal_Forecast_Income__c/fields/This_Year_Expected_Balance__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Expected_Balance__c</fullName>
    <label>This Year Expected Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>