force-app/main/default/objects/Deal_Forecast_Income__c/fields/TMB_Short_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Short_ID__c</fullName>
    <formula>TEXT(VALUE(RIGHT( Customer__r.TMB_Customer_ID_PE__c  , 20)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMB Short ID</label>
    <type>Text</type>
</CustomField>