force-app/main/default/objects/Deal_Forecast_Income__c/fields/Utilization_Percent__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Percent__c</fullName>
    <label>Utilization%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>