force-app/main/default/objects/Deal_Forecast_Income__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Volume/Drawdown Amount</description>
    <label>Volume / Drawdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>