force-app/main/default/objects/Deal_Forecast_Income__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year of forecast</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>